--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -733,6 +733,7 @@
                 <script type="text/javascript" src="/web/static/tests/widgets/domain_selector_tests.js"/>
                 <script type="text/javascript" src="/web/static/tests/widgets/model_field_selector_tests.js"/>
                 <script type="text/javascript" src="/web/static/tests/widgets/rainbow_man_tests.js"/>
+                <script type="text/javascript" src="/web/static/tests/widgets/loading_tests.js"></script>
 
                 <script type="text/javascript" src="/web/static/tests/tools/debug_manager_tests.js"/>
 
