--- a/addons/point_of_sale/views/res_config_settings_views.xml
+++ b/addons/point_of_sale/views/res_config_settings_views.xml
@@ -286,6 +286,9 @@
                             <setting id="stripe_payment_terminal_setting" title="The transactions are processed by Stripe. Set your Stripe credentials on the related payment method." string="Stripe" help="Accept payments with a Stripe payment terminal">
                                 <field name="module_pos_stripe"/>
                             </setting>
+                            <setting id="viva_wallet_payment_terminal_setting" title="The transactions are processed by Viva Wallet. Set your Viva Wallet credentials on the related payment method." string="Viva Wallet (European)" help="Accept payments with a Viva Wallet payment terminal">
+                                <field name="module_pos_viva_wallet"/>
+                            </setting>
                             <setting id="vantiv_payment_terminal_setting" title="The transactions are processed by Vantiv. Set your Vantiv credentials on the related payment method." string="Vantiv (US &amp; Canada)" documentation="/applications/sales/point_of_sale/payment_methods/terminals/vantiv.html" help="Accept payments with a Vantiv payment terminal">
                                 <field name="module_pos_mercury"/>
                                 <div class="content-group" invisible="not module_pos_mercury">
