--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -438,6 +438,92 @@
     </xpath>
 </template>
 
+<!-- "hamburger" template -->
+<template id="template_header_hamburger" inherit_id="website.layout" name="Template Header Hamburger" active="False">
+    <xpath expr="//header//nav" position="replace">
+        <t t-call="website.navbar">
+            <t t-set="_navbar_classes" t-valuef="shadow-sm"/>
+            <t t-set="_navbar_expand_class" t-valuef="None"/>
+
+            <div id="top_menu_container" class="container d-grid py-0 o_grid_header_3_cols">
+                <!-- Nav Toggler -->
+                <t t-call="website.navbar_toggler">
+                    <t t-set="_toggler_class" t-valuef="btn me-auto p-2"/>
+                </t>
+                <!-- Brand -->
+                <t t-call="website.placeholder_header_brand">
+                    <t t-set="_link_class" t-valuef="mw-100 mx-auto"/>
+                </t>
+                <ul class="o_header_hamburger_right_col navbar-nav flex-row gap-2 ms-auto">
+                    <!-- Sign In -->
+                    <t t-call="portal.placeholder_user_sign_in">
+                        <t t-set="_link_class" t-valuef="o_navlink_background_hover btn rounded-circle text-reset"/>
+                    </t>
+                    <!-- User Dropdown -->
+                    <t t-call="portal.user_dropdown">
+                        <t t-set="_icon" t-value="true"/>
+                        <t t-set="_item_class" t-valuef="dropdown"/>
+                        <t t-set="_icon_class" t-valuef="fa-stack"/>
+                        <t t-set="_link_class" t-valuef="o_navlink_background_hover btn p-1 d-flex align-items-center pe-2 rounded-circle text-reset"/>
+                        <t t-set="_dropdown_menu_class" t-valuef="dropdown-menu-end"/>
+                    </t>
+                </ul>
+                <div class="offcanvas offcanvas-start o_navbar_mobile vh-100" id="top_menu_collapse">
+                    <div class="offcanvas-header justify-content-end">
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"/>
+                    </div>
+                    <div class="offcanvas-body d-flex flex-column justify-content-between">
+                        <ul class="navbar-nav">
+                            <!-- Search bar -->
+                            <t t-call="website.placeholder_header_search_box">
+                                <t t-set="_input_classes" t-valuef="ps-3 border border-end-0 rounded-start-pill"/>
+                                <t t-set="_submit_classes" t-valuef="border border-start-0 rounded-end-pill bg-o-color-4"/>
+                                <t t-set="limit" t-valuef="0"/>
+                            </t>
+                            <!-- Navbar -->
+                            <li>
+                                <t t-call="website.navbar_nav">
+                                    <t t-set="_nav_class" t-valuef="my-3"/>
+
+                                    <!-- Menu -->
+                                    <t t-foreach="website.menu_id.child_id" t-as="submenu">
+                                        <t t-call="website.submenu">
+                                            <t t-set="item_class" t-valuef="nav-item"/>
+                                            <t t-set="link_class" t-valuef="nav-link"/>
+                                        </t>
+                                    </t>
+                                </t>
+                            </li>
+                            <!-- Text element -->
+                            <t t-call="website.placeholder_header_text_element">
+                                <t t-set="_txt_elt_content" t-valuef="phone_mail"/>
+                                <t t-set="_div_class" t-valuef="mt-2 pt-2 border-top o_border_contrast"/>
+                                <t t-set="_link_class" t-valuef="nav-link d-block p-1"/>
+                            </t>
+                            <!-- Social -->
+                            <t t-call="website.header_social_links_no_color">
+                                <t t-set="_div_class" t-valuef="mt-2 pt-2 border-top o_border_contrast"/>
+                            </t>
+                        </ul>
+                        <ul class="navbar-nav gap-2 w-100 mt-3">
+                            <!-- Language Selector -->
+                            <t t-call="website.placeholder_header_language_selector">
+                                <t t-set="_btn_class" t-valuef="btn-outline-secondary d-flex align-items-center w-100"/>
+                                <t t-set="_txt_class" t-valuef="me-auto small"/>
+                                <t t-set="_flag_class" t-valuef="me-2"/>
+                                <t t-set="_div_classes" t-valuef="dropup"/>
+                                <t t-set="_dropdown_menu_class" t-valuef="w-100"/>
+                            </t>
+                            <!-- Call To Action -->
+                            <t t-call="website.header_call_to_action_large"/>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </t>
+    </xpath>
+</template>
+
 <!-- Header options -->
 <template id="option_layout_hide_header" inherit_id="website.layout" active="False">
     <xpath expr="//header" position="before">
