--- a/addons/sale/wizard/res_config_settings_views.xml
+++ b/addons/sale/wizard/res_config_settings_views.xml
@@ -103,6 +103,9 @@
                         <setting id="order_warnings" string="Sale Warnings" help="Get warnings in orders for products or customers">
                             <field name="group_warning_sale"/>
                         </setting>
+                        <setting id="sale_pdf_quote_builder" string="PDF Quote builder" help="Create beautiful pdf for your quote" company_dependent="1">
+                            <field name="module_sale_pdf_quote_builder"/>
+                        </setting>
                         <setting id="no_edit_order" help="No longer edit orders once confirmed">
                             <field name="group_auto_done_setting"/>
                         </setting>
