[FIX] pos_self_order: Kiosk, post-merge fixes
Before this commit, some UI improvements and fixes were needed.

- Revamped the Product List Footer
  * Removed the total amount from the "pay/review order" button.
  * Introduced a separate panel to display the total amount.
  * Added a count of items in the cart to the new panel.
  * Adapt the "click on product to cart" animation

- Adjusted the Combo screen layout:
  * Set a fixed height for product images in the summary view, post
  combo selection.

- Adjusted font-size, and height for desktop (landscape) view

- btn-primary for company colors scss

task-3488361

--- a/addons/pos_self_order/static/src/kiosk/self_order_kiosk_index.scss
+++ b/addons/pos_self_order/static/src/kiosk/self_order_kiosk_index.scss
@@ -6,7 +6,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow: hidden;
-  font-size: 24px;
+  font-size: clamp(.75rem, 1.25rem, 1.50em);
   -webkit-user-select: none !important;
   -ms-user-select: none !important;
   user-select: none !important;
@@ -23,4 +23,37 @@ body {
 .o_kiosk-card img {
   object-fit: contain;
   aspect-ratio: 1/1;
+}
+
+/* Custom styling for .btn-primary to reflect company settings colors */
+
+.btn-primary {
+  background-color: var(--companyColor);
+  border-color: transparent;
+
+  &:hover {
+      background-color: var(--companyColor);
+      border-color: var(--companyColor);
+  }
+
+  &:active, &:focus {
+      background-color: $white;
+      color: var(--companyColor);
+      border-color: var(--companyColor);
+  }
+
+  &.disabled {
+      background-color: var(--companyColor);
+      border-color: var(--companyColor);
+      opacity: .5;
+  }
+}
+
+.text-bg-primary, .bg-primary {
+  background-color: var(--companyColor) !important;
+  border-color: var(--companyColor) !important;
+}
+
+.border-primary {
+  border-color: var(--companyColor) !important;
 }
