--- a/addons/website/static/src/client_actions/website_preview/website_preview.scss
+++ b/addons/website/static/src/client_actions/website_preview/website_preview.scss
@@ -98,3 +98,13 @@ header {
 .o_block_preview {
     z-index: $zindex-dropdown - 1 !important;
 }
+
+.o_ace_view_editor_wrapper {
+    @include o-position-absolute($o-navbar-height, 0, 0);
+    position: fixed;
+    z-index: $zindex-modal;
+
+    .o_website_fullscreen & {
+        top: 0;
+    }
+}
