--- a/addons/website/static/src/components/ace_editor/ace_editor.scss
+++ b/addons/website/static/src/components/ace_editor/ace_editor.scss
@@ -1,9 +1,80 @@
-.o_ace_view_editor_wrapper:not(.oe_form_field) {
-    @include o-position-absolute($o-navbar-height, 0, 0);
-    position: fixed;
-    z-index: $zindex-modal;
+$o-we-ace-color: #2F3129 !default;
 
-    .o_website_fullscreen & {
-        top: 0;
+.o_ace_view_editor {
+    background: $o-we-ace-color;
+    color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    opacity: 0.97;
+
+    .o_ace_view_editor_title {
+        flex: 0 0 auto;
+        display: flex;
+        align-items: center;
+        padding: $grid-gutter-width/4;
+
+        > .o_ace_type_switcher > button::after {
+            @include o-caret-down;
+            margin-left: 4px;
+        }
+
+        > * {
+            flex: 0 0 auto;
+            margin: 0 $grid-gutter-width/4;
+
+            &.o_include_option {
+                display: flex;
+                align-items: center;
+                font-size: 11px;
+            }
+
+            &.o_res_list {
+                flex: 1 1 auto;
+                min-width: 60px;
+            }
+        }
+    }
+
+    #ace-view-id {
+        flex: 0 0 auto;
+        padding: $grid-gutter-width/4 $grid-gutter-width/2;
+        background-color: lighten($o-we-ace-color, 10%);
+
+        .o_ace_editor_resource_info {
+            color: #ebecee;
+        }
+    }
+
+    #ace-view-editor {
+        @mixin ace-line-error-mixin {
+            content: "";
+            z-index: 1000;
+            display: flex;
+            background-color: $o-we-color-danger;
+            color: white;
+            font-size: 1.2em;
+            align-items: center;
+            justify-content: center;
+            cursor: help;
+        }
+
+        flex: 1 1 auto;
+        .ace_gutter {
+            .ace_gutter-cell.o_error {
+                position: relative;
+
+                &::before {
+                    @include o-position-absolute(-100vh, 0, -100vh);
+                    @include ace-line-error-mixin;
+                    width: 2px;
+                }
+                &::after {
+                    @include o-position-absolute(-100%, 0, -100%, 0);
+                    @include ace-line-error-mixin;
+                    font-family: FontAwesome;
+                    content: "\f071";
+                }
+            }
+        }
     }
 }
